force-app/main/default/objects/Customer_Banks__c/Customer_Banks__c.object-meta.xml
<CustomObject>
    <label>Customer Banks</label>
    <nameField>
        <displayFormat>B-{00000000}</displayFormat>
        <label>BANKS No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Banks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>