force-app/main/default/objects/Customer_Banks__c/fields/Bank_Account__c.field-meta.xml
<CustomField>
    <fullName>Bank_Account__c</fullName>
    <label>Bank Account</label>
    <length>38</length>
    <required>true</required>
    <type>Text</type>
</CustomField>