force-app/main/default/objects/Customer_Banks__c/fields/Bank_Account_Holder__c.field-meta.xml
<CustomField>
    <fullName>Bank_Account_Holder__c</fullName>
    <label>Bank Account Holder</label>
    <length>60</length>
    <type>Text</type>
</CustomField>