force-app/main/default/objects/Customer_Banks__c/fields/Bank_Code__c.field-meta.xml
<CustomField>
    <fullName>Bank_Code__c</fullName>
    <label>Bank Code</label>
    <length>15</length>
    <type>Text</type>
</CustomField>