force-app/main/default/objects/Customer_Banks__c/fields/Bank_Control_Code__c.field-meta.xml
<CustomField>
    <fullName>Bank_Control_Code__c</fullName>
    <label>Bank Control Code</label>
    <length>2</length>
    <type>Text</type>
</CustomField>