force-app/main/default/objects/Customer_Banks__c/fields/Bank_Country__c.field-meta.xml
<CustomField>
    <fullName>Bank_Country__c</fullName>
    <label>Bank Country</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Country</valueSetName>
    </valueSet>
</CustomField>