force-app/main/default/objects/Customer_Banks__c/fields/Bank_name_in_English__c.field-meta.xml
<CustomField>
    <fullName>Bank_name_in_English__c</fullName>
    <description>MDG主数据：银行名称（英文）</description>
    <label>Bank name (in English)</label>
    <length>30</length>
    <type>Text</type>
</CustomField>