force-app/main/default/objects/Customer_Banks__c/fields/Bank_name_local_language__c.field-meta.xml
<CustomField>
    <fullName>Bank_name_local_language__c</fullName>
    <description>MDG主数据：银行名称（当地语言）</description>
    <label>Bank name (local language)</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
</CustomField>