force-app/main/default/objects/Customer_Banks__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Customer Banks</relationshipLabel>
    <relationshipName>Customer_Banks</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>