force-app/main/default/objects/Customer_Banks__c/fields/Ecss_Result__c.field-meta.xml
<CustomField>
    <fullName>Ecss_Result__c</fullName>
    <label>Ecss Result</label>
    <length>50</length>
    <type>Text</type>
</CustomField>