force-app/main/default/objects/Customer_Banks__c/fields/MDG_BANK__c.field-meta.xml
<CustomField>
    <fullName>MDG_BANK__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>银行主数据</description>
    <label>IBAN</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Country does not exist or does not match filter criteria.</errorMessage>
        <filterItems>
            <field>$Source.Bank_Country__c</field>
            <operation>equals</operation>
            <valueField>MDG_Bank__c.BANKS__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>MDG_Bank__c</referenceTo>
    <relationshipLabel>Customer Banks</relationshipLabel>
    <relationshipName>Customer_Banks</relationshipName>
    <type>Lookup</type>
</CustomField>